2021-05-19  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-hl-current-buffer): New face for hl-line-mode
	only for current-buffer.
	(diredc--hl-cookie): New variable to track remapped face hl-line.
	(diredc--window-state-change-hook-function): Apply and remove new
	face, as required.
	(diredc-mode): Apply and remove the hook function.

2021-05-19  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-swap-windows): New feature.
	(diredc--create-keymap, diredc-browse--create-keymap): Bind it.
	(diredc--swap-browse-buffer): Support for new feature.
	(diredc--window-state-change-hook-function):

2021-04-27  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--advice--dired-run-shell-command): Divide up
	multiple commands for proper comint-send-input.
	(diredc--advice--dired-read-shell-command)
	(diredc-do-async-shell-command)
	(diredc--advice--shell-guess-fallback): Improve regex for
	executable-find.

2021-04-27  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--advice--shell-guess-fallback): Handle all
	input options (emacs bug 48071)
	(diredc-do-async-shell-command): Validate input (emacs bug 48072).
	(diredc--advice--dired-read-shell-command): New advice, for
	synchronous calls.
	(diredc-mode): Use it.
	(diredc--advice--dired-run-shell-command): Change regex.

2021-04-25  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-do-async-shell-command): Guarantee return to
	correct diredc window.

2021-04-25  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-do-async-shell-command): New function.
	(diredc--create-keymap): Set keybinding for it.

2021-04-24  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-wdired): Record state of dired-omit-mode
	(diredc--advice--wdired-exit): Use it.

2021-04-24  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-trash-empty): clear minibuffer message upon
	completeion.

2021-04-22  Boruch Baum  <boruch_baum@gmx.com>
